--- a/.github/workflows/flux-bootstrap.yml
+++ b/.github/workflows/flux-bootstrap.yml
@@ -4,7 +4,8 @@ run-name: "Flux Bootstrap: ${{ github.event.client_payload.metadata.cluster || '
 
 on:
   repository_dispatch:
-    types: [Kustomization/*-cluster.flux-system]
+    types:
+      - Kustomization/clusters.flux-system
 
 concurrency:
   group: fluxcd-bootstrap-${{ github.event.client_payload.metadata.cluster }}
