--- a/kubernetes/namespaces/overlays/control-plane/kustomization.yaml
+++ b/kubernetes/namespaces/overlays/control-plane/kustomization.yaml
@@ -4,7 +4,7 @@ kind: Kustomization
 # Control-plane cluster overlay - platform services only
 # GKE cluster resources are handled by the clusters kustomization
 resources:
-  # Include staged Crossplane installation for control-plane cluster
+  - ../../base/crossplane-system
   - ../../base/flux-system
   - ../../base/platform-services
   - ../../base/kagent
