move compositions to a separate folder

--- a/kubernetes/clusters/kind/clusters.yaml
+++ b/kubernetes/clusters/kind/clusters.yaml
@@ -3,6 +3,12 @@ kind: Kustomization
 metadata:
   name: clusters
   namespace: flux-system
+  labels:
+    tornado-demo.io/cluster: apps-dev
+    tornado-demo.io/cluster-type: workload
+    tornado-demo.io/cluster-env: dev
+  annotations:
+    event.toolkit.fluxcd.io/cluster: "apps-dev"
 spec:
   interval: 10m
   timeout: 30m
