--- a/kubernetes/clusters/control-plane/clusters.yaml
+++ b/kubernetes/clusters/control-plane/clusters.yaml
@@ -3,6 +3,11 @@ kind: Kustomization
 metadata:
   name: clusters
   namespace: flux-system
+  labels:
+    tornado-demo.io/cluster: control-plane
+    tornado-demo.io/cluster-type: control-plane
+  annotations:
+    event.toolkit.fluxcd.io/cluster: control-plane
 spec:
   interval: 10m
   timeout: 30m
