--- a/kubernetes/namespaces/overlays/control-plane/kustomization.yaml
+++ b/kubernetes/namespaces/overlays/control-plane/kustomization.yaml
@@ -5,6 +5,8 @@ kind: Kustomization
 # GKE cluster resources are handled by the clusters kustomization
 resources:
   - ../../base/crossplane-system
+  - ../../../components/crossplane-compositions/overlays/control-plane
+
   - ../../base/flux-system
   - ../../base/platform-services
   - ../../base/kagent
