--- a/kubernetes/components/crossplane-compositions/overlays/control-plane/kustomization.yaml
+++ b/kubernetes/components/crossplane-compositions/overlays/control-plane/kustomization.yaml
@@ -1,8 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+# Control-plane cluster needs both GKE and CloudRun compositions
 resources:
-  - ../../base/cloudrun-composition.yaml
-  - ../../base/cloudrun-xrd.yaml
-  - ../../base/gke-cluster-composition.yaml
-  - ../../base/gke-cluster-xrd.yaml
+  - ../../base/gke-cluster
+  - ../../base/cloudrun
