--- a/kubernetes/clusters/kind/crossplane-providers.yaml
+++ b/kubernetes/clusters/kind/crossplane-providers.yaml
@@ -1,14 +1,14 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: platform
+  name: crossplane-providers
   namespace: flux-system
 spec:
   interval: 10m
-  timeout: 30m
-  path: ./kubernetes/namespaces/base/flux-system
+  timeout: 15m
+  path: ./kubernetes/namespaces/base/crossplane-providers
   prune: true
-  wait: false
+  wait: true  # Wait for providers to be ready
   sourceRef:
     kind: GitRepository
     name: flux-system
@@ -17,4 +17,4 @@ spec:
       - kind: ConfigMap
         name: platform-config
   dependsOn:
-    - name: crossplane-compositions  # Only start platform services after Crossplane is fully ready
+    - name: crossplane-install  # Wait for Crossplane core to be installed first
