another fix to mask project id and fix kustomization dependencies

--- a/kubernetes/clusters/control-plane/clusters.yaml
+++ b/kubernetes/clusters/control-plane/clusters.yaml
@@ -7,7 +7,9 @@ metadata:
     tornado-demo.io/cluster: control-plane
     tornado-demo.io/cluster-type: control-plane
   annotations:
-    event.toolkit.fluxcd.io/cluster: control-plane
+    event.toolkit.fluxcd.io/cluster: "apps-dev"
+    event.toolkit.fluxcd.io/location: "australia-southeast1-a"  
+    event.toolkit.fluxcd.io/project: "${PROJECT_ID}"
 spec:
   interval: 10m
   timeout: 30m
