--- a/kubernetes/clusters/control-plane/crossplane-system.yaml
+++ b/kubernetes/clusters/control-plane/crossplane-system.yaml
@@ -1,14 +1,14 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: platform
+  name: crossplane-system
   namespace: flux-system
 spec:
   interval: 10m
   timeout: 30m
-  path: ./kubernetes/namespaces/overlays/control-plane
+  path: ./kubernetes/namespaces/base/crossplane-system
   prune: true
-  wait: false
+  wait: true
   sourceRef:
     kind: GitRepository
     name: flux-system
@@ -17,4 +17,4 @@ spec:
       - kind: ConfigMap
         name: platform-config
   dependsOn:
-    - name: crossplane-compositions
+    - name: crossplane-core
