split platform components into separate flux kustomizations (#38)
This pull request introduces a significant architectural overhaul to the GitOps deployment model, focusing on enhancing the modularity, clarity, and reliability of infrastructure and application provisioning. By breaking down platform components and Crossplane deployments into more granular Flux Kustomizations with explicit dependencies, the changes aim to streamline the deployment process, improve error handling, and simplify the overall management of multi-cluster Kubernetes environments. The accompanying documentation updates and setup script improvements further support this refined approach.

Highlights
* Granular Flux Kustomizations: Platform components and Crossplane deployments are now split into separate, dependency-aware Flux Kustomizations, improving modularity and deployment control across different cluster types.

* Architectural Refactoring: Crossplane compositions have been moved to a dedicated kubernetes/components directory, and new base directories (`crossplane-configs`, `crossplane-core`, `crossplane-providers`) were introduced for better organization and reusability.

* Simplified Cluster Provisioning: The deployment paths for GKE clusters from both Kind and control-plane clusters now directly reference base configurations, removing unnecessary overlay indirection and simplifying the architecture.

* Enhanced Setup Script Robustness: The setup-kind-cluster.sh script includes additional delays and conditional waits to ensure stability during Flux and Crossplane initialization, addressing potential timing issues.

* Consolidated GitRepository Usage: The system now uses a single flux-system GitRepository, eliminating the redundant `crossplane-config` repository for a more unified source management.

* Dynamic Flux Eventing: Flux notification providers now leverage dynamic event metadata through annotations on Kustomizations, removing the need for static eventMetadata and enhancing fle

--- a/.github/workflows/flux-bootstrap.yml
+++ b/.github/workflows/flux-bootstrap.yml
@@ -1,5 +1,6 @@
 name: Flux Bootstrap GKE Clusters
 
+# Requires repository secret: PROJECT_ID (GCP Project ID)
 run-name: "Flux Bootstrap: ${{ github.event.client_payload.metadata.cluster || 'Unknown Cluster' }} 🚀"
 
 on:
@@ -19,12 +20,6 @@ jobs:
   bootstrap-flux:
     name: Bootstrap Flux on GKE Cluster
     runs-on: ubuntu-latest
-    env:
-      CLOUDSDK_CORE_PROJECT: ${{ github.event.client_payload.metadata.project }}
-      CLOUDSDK_PROJECT: ${{ github.event.client_payload.metadata.project }}
-      GCLOUD_PROJECT: ${{ github.event.client_payload.metadata.project }}
-      GCP_PROJECT: ${{ github.event.client_payload.metadata.project }}
-      GOOGLE_CLOUD_PROJECT: ${{ github.event.client_payload.metadata.project }}
 
     steps:
     - name: Checkout repository
@@ -32,28 +27,21 @@ jobs:
       with:
         fetch-depth: 0
 
-    - name: Mask sensitive variables
-      run: |
-        echo "::add-mask::${{ env.CLOUDSDK_CORE_PROJECT }}"
-        echo "::add-mask::${{ env.CLOUDSDK_PROJECT }}"
-        echo "::add-mask::${{ env.GCLOUD_PROJECT }}"
-        echo "::add-mask::${{ env.GCP_PROJECT }}"
-        echo "::add-mask::${{ env.GOOGLE_CLOUD_PROJECT }}"
-
-    - name: Extract cluster info from payload and print event message
+    - name: Extract cluster info from payload and set project from secret
       id: cluster-info
+      env:
+        PROJECT_ID: ${{ secrets.PROJECT_ID }}
       run: |
-        PROJECT_ID="${{ github.event.client_payload.metadata.project }}"
         LOCATION="${{ github.event.client_payload.metadata.location }}"
         CLUSTER="${{ github.event.client_payload.metadata.cluster }}"
+
+        # Mask sensitive information FIRST before any output
+        echo "::add-mask::${PROJECT_ID}"
 
         # Print the event message from the payload
         echo "📨 Event message: ${{ github.event.client_payload.message || 'No message in payload' }}"
 
-        # Mask sensitive information immediately
-        echo "::add-mask::${PROJECT_ID}"
         echo "projectID=${PROJECT_ID}" >> $GITHUB_OUTPUT
-
         echo "cluster=${CLUSTER}" >> $GITHUB_OUTPUT
         echo "location=${LOCATION}" >> $GITHUB_OUTPUT
         echo "should_proceed=true" >> $GITHUB_OUTPUT
@@ -70,13 +58,13 @@ jobs:
         token_format: access_token
         workload_identity_provider: ${{ secrets.WIF_PROVIDER }}
         service_account: ${{ secrets.WIF_SERVICE_ACCOUNT }}
-        project_id: ${{ steps.cluster-info.outputs.projectID }}
+        project_id: ${{ secrets.PROJECT_ID }}
 
     - name: Wait for cluster provisioning and readiness
       if: steps.cluster-info.outputs.should_proceed == 'true'
+      env:
+        PROJECT_ID: ${{ steps.cluster-info.outputs.projectID }}
       run: |
-        echo "::add-mask::$PROJECT_ID"
-        echo "PROJECT_ID=$PROJECT_ID" >> $GITHUB_ENV
 
         IMMEDIATE="${{ github.event.client_payload.metadata.immediate }}"
         if [ "$IMMEDIATE" = "true" ]; then
