--- a/kubernetes/clusters/control-plane/clusters.yaml
+++ b/kubernetes/clusters/control-plane/clusters.yaml
@@ -3,10 +3,17 @@ kind: Kustomization
 metadata:
   name: clusters
   namespace: flux-system
+  labels:
+    tornado-demo.io/cluster: control-plane
+    tornado-demo.io/cluster-type: control-plane
+  annotations:
+    event.toolkit.fluxcd.io/cluster: "apps-dev"
+    event.toolkit.fluxcd.io/location: "australia-southeast1-a"
+    event.toolkit.fluxcd.io/project: "${PROJECT_ID}"
 spec:
   interval: 10m
   timeout: 30m
-  path: ./kubernetes/namespaces/overlays/control-plane-clusters
+  path: ./kubernetes/namespaces/base/gkecluster-apps-dev
   prune: true
   wait: false
   sourceRef:
