--- a/kubernetes/clusters/control-plane/crossplane-core.yaml
+++ b/kubernetes/clusters/control-plane/crossplane-core.yaml
@@ -1,14 +1,14 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: platform
+  name: crossplane-core
   namespace: flux-system
 spec:
   interval: 10m
   timeout: 30m
-  path: ./kubernetes/namespaces/base/flux-system
+  path: ./kubernetes/namespaces/base/crossplane-system/install
   prune: true
-  wait: false
+  wait: true
   sourceRef:
     kind: GitRepository
     name: flux-system
@@ -16,5 +16,3 @@ spec:
     substituteFrom:
       - kind: ConfigMap
         name: platform-config
-  dependsOn:
-    - name: crossplane-compositions  # Only start platform services after Crossplane is fully ready
