--- a/kubernetes/clusters/control-plane/crossplane-providers.yaml
+++ b/kubernetes/clusters/control-plane/crossplane-providers.yaml
@@ -1,12 +1,12 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: platform
+  name: crossplane-providers
   namespace: flux-system
 spec:
   interval: 10m
   timeout: 30m
-  path: ./kubernetes/namespaces/base/flux-system
+  path: ./kubernetes/namespaces/base/crossplane-system/providers
   prune: true
   wait: false
   sourceRef:
@@ -17,4 +17,4 @@ spec:
       - kind: ConfigMap
         name: platform-config
   dependsOn:
-    - name: crossplane-compositions  # Only start platform services after Crossplane is fully ready
+    - name: crossplane-core
