--- a/kubernetes/clusters/kind/crossplane-configs.yaml
+++ b/kubernetes/clusters/kind/crossplane-configs.yaml
@@ -1,14 +1,14 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: platform
+  name: crossplane-configs
   namespace: flux-system
 spec:
   interval: 10m
-  timeout: 30m
-  path: ./kubernetes/namespaces/base/flux-system
+  timeout: 10m
+  path: ./kubernetes/namespaces/base/crossplane-configs
   prune: true
-  wait: false
+  wait: true
   sourceRef:
     kind: GitRepository
     name: flux-system
@@ -17,4 +17,4 @@ spec:
       - kind: ConfigMap
         name: platform-config
   dependsOn:
-    - name: crossplane-compositions  # Only start platform services after Crossplane is fully ready
+    - name: crossplane-providers  # Wait for providers to install and create CRDs
