--- a/kubernetes/components/crossplane-compositions/base/cloudrun/kustomization.yaml
+++ b/kubernetes/components/crossplane-compositions/base/cloudrun/kustomization.yaml
@@ -2,4 +2,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - notification-provider.yaml
+  - cloudrun-composition.yaml
+  - cloudrun-xrd.yaml
