--- a/kubernetes/namespaces/base/crossplane-system/kustomization.yaml
+++ b/kubernetes/namespaces/base/crossplane-system/kustomization.yaml
@@ -1,11 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-# Full crossplane system - base components
+# Full crossplane system - base components (excluding providers and providerconfigs which are handled separately)
 resources:
   - install
-  - compositions
   - environment-configs
   - functions
-  - providerconfigs
-  - providers
