fix repo url for kgateway

--- a/kubernetes/namespaces/base/kgateway-system/helm/kgateway-helm-repo.yaml
+++ b/kubernetes/namespaces/base/kgateway-system/helm/kgateway-helm-repo.yaml
@@ -7,4 +7,4 @@ metadata:
 spec:
   interval: 5m
   type: oci
-  url: cr.kgateway.dev/kgateway-dev/charts
+  url: oci://cr.kgateway.dev/kgateway-dev/charts
