--- a/kubernetes/clusters/control-plane/kagent-crds.yaml
+++ b/kubernetes/clusters/control-plane/kagent-crds.yaml
@@ -1,14 +1,14 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: platform
+  name: kagent-crds
   namespace: flux-system
 spec:
   interval: 10m
   timeout: 30m
-  path: ./kubernetes/namespaces/overlays/control-plane
+  path: ./kubernetes/namespaces/base/kagent/kagent/helm
   prune: true
-  wait: false
+  wait: true
   sourceRef:
     kind: GitRepository
     name: flux-system
@@ -16,7 +16,3 @@ spec:
     substituteFrom:
       - kind: ConfigMap
         name: platform-config
-  dependsOn:
-    - name: crossplane-compositions
-    - name: kgateway-crds
-    - name: kagent-crds
