--- a/kubernetes/namespaces/base/kagent-system/kustomization.yaml
+++ b/kubernetes/namespaces/base/kagent-system/kustomization.yaml
@@ -1,5 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-# Add resources when kagent-system content is properly organized
-resources: []
+resources:
+  - namespace.yaml
