--- a/kubernetes/clusters/control-plane/crossplane-functions.yaml
+++ b/kubernetes/clusters/control-plane/crossplane-functions.yaml
@@ -1,12 +1,12 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: crossplane-compositions
+  name: crossplane-functions
   namespace: flux-system
 spec:
   interval: 10m
   timeout: 30m
-  path: ./kubernetes/components/crossplane-compositions/overlays/control-plane
+  path: ./kubernetes/namespaces/base/crossplane-system/functions
   prune: true
   wait: true
   sourceRef:
@@ -16,6 +16,6 @@ spec:
     substituteFrom:
       - kind: ConfigMap
         name: platform-config
+  # Functions need to be installed after Crossplane core
   dependsOn:
-    - name: crossplane-providerconfigs
-    - name: crossplane-functions
+    - name: crossplane-core
