--- a/kubernetes/namespaces/base/kagent/kagent/helm/kustomization.yaml
+++ b/kubernetes/namespaces/base/kagent/kagent/helm/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
+  - ../../../kagent-system/namespace.yaml  # Ensure namespace exists first
   - kagent-helm-repo.yaml
   - kagent-crds-release.yaml
   - kagent-release.yaml
