Complete GKE fleet auto provisioning with GitOps and GA workflows (#39)

--- a/.github/workflows/flux-bootstrap.yml
+++ b/.github/workflows/flux-bootstrap.yml
@@ -44,14 +44,11 @@ jobs:
         echo "projectID=${PROJECT_ID}" >> $GITHUB_OUTPUT
         echo "cluster=${CLUSTER}" >> $GITHUB_OUTPUT
         echo "location=${LOCATION}" >> $GITHUB_OUTPUT
-        echo "should_proceed=true" >> $GITHUB_OUTPUT
 
     - name: Setup Flux CLI
-      if: steps.cluster-info.outputs.should_proceed == 'true'
       uses: fluxcd/flux2/action@main
 
     - name: Authenticate to Google Cloud
-      if: steps.cluster-info.outputs.should_proceed == 'true'
       id: auth
       uses: google-github-actions/auth@v2
       with:
@@ -61,7 +58,6 @@ jobs:
         project_id: ${{ secrets.PROJECT_ID }}
 
     - name: Wait for cluster provisioning and readiness
-      if: steps.cluster-info.outputs.should_proceed == 'true'
       env:
         PROJECT_ID: ${{ steps.cluster-info.outputs.projectID }}
       run: |
@@ -102,7 +98,6 @@ jobs:
         fi
 
     - name: Get GKE credentials
-      if: steps.cluster-info.outputs.should_proceed == 'true'
       id: get-credentials
       uses: google-github-actions/get-gke-credentials@v2
       with:
@@ -110,7 +105,6 @@ jobs:
         location: ${{ steps.cluster-info.outputs.location }}
 
     - name: Wait for cluster to be ready
-      if: steps.cluster-info.outputs.should_proceed == 'true'
       id: cluster-ready
       run: |
         echo "Checking if cluster is ready..."
@@ -127,7 +121,6 @@ jobs:
             echo "Waiting for kube-system pods to be ready..."
             if kubectl wait --for=condition=Ready pods --all -n kube-system --timeout=300s; then
               echo "Cluster is ready for Flux bootstrap"
-              echo "cluster_ready=true" >> $GITHUB_OUTPUT
               break
             else
               echo "Some kube-system pods are not ready yet"
@@ -142,12 +135,10 @@ jobs:
 
         if [ $elapsed -ge $timeout_seconds ]; then
           echo "Timeout waiting for cluster to be ready"
-          echo "cluster_ready=false" >> $GITHUB_OUTPUT
           exit 1
         fi
 
     - name: Create cluster config
-      if: steps.cluster-info.outputs.should_proceed == 'true' && steps.cluster-ready.outputs.cluster_ready == 'true'
       run: |
         # Create the namespace if it doesn't already exist
         kubectl get namespace flux-system >/dev/null 2>&1 || kubectl create namespace flux-system
@@ -162,12 +153,10 @@ jobs:
 
 
     - name: Run Flux pre-installation checks
-      if: steps.cluster-info.outputs.should_proceed == 'true' && steps.cluster-ready.outputs.cluster_ready == 'true'
       run: |
         flux check --pre
 
     - name: Bootstrap Flux
-      if: steps.cluster-info.outputs.should_proceed == 'true' && steps.cluster-ready.outputs.cluster_ready == 'true'
       id: bootstrap
       env:
         GITHUB_TOKEN: ${{ secrets.FLUX_GITHUB_TOKEN }}
@@ -185,7 +174,38 @@ jobs:
           --timeout=10m0s
 
     - name: Run Flux installation checks
-      if: steps.cluster-info.outputs.should_proceed == 'true' && steps.cluster-ready.outputs.cluster_ready == 'true'
       run: |
         flux check
         echo "Flux bootstrap completed for cluster: ${{ steps.cluster-info.outputs.cluster }}"
+
+    - name: Wait for Flux reconciliation and trigger stalled kustomizations
+      run: |
+        echo "🕒 Waiting 2 minutes for initial Flux reconciliation..."
+        sleep 120
+
+        echo "📋 Checking Flux kustomizations status:"
+        flux get all -A
+
+        echo ""
+        echo "🔄 Triggering reconciliation for any non-Ready kustomizations..."
+
+        # Get list of kustomizations that are not Ready (excluding those with empty READY column)
+        NOT_READY=$(kubectl get kustomizations.kustomize.toolkit.fluxcd.io -A --no-headers | \
+          awk '$6 != "True" && $6 != "" {print $1":"$2}' | grep -v '^$' || true)
+
+        if [ -n "$NOT_READY" ]; then
+          echo "Found non-Ready kustomizations, triggering reconciliation:"
+          echo "$NOT_READY" | while IFS=':' read -r namespace name; do
+            echo "  🔄 Reconciling kustomization $name in namespace $namespace"
+            flux reconcile kustomization "$name" -n "$namespace" --timeout=3s || echo "    ⚠️ Failed to reconcile $name"
+          done
+        else
+          echo "✅ All kustomizations are Ready, no action needed"
+        fi
+
+        echo ""
+        echo "🕒 Waiting 30 seconds for reconciliation to complete..."
+        sleep 30
+
+        echo "📋 Final Flux status after reconciliation:"
+        flux get all -A
