--- a/kubernetes/namespaces/base/kgateway-system/kustomization.yaml
+++ b/kubernetes/namespaces/base/kgateway-system/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - namespace.yaml
   - gateway-class.yaml
-  - gateway-parameters.yaml
   - gateway.yaml
   - httproute-xlistener.yaml
