--- a/kubernetes/namespaces/base/crossplane-system/install/crossplane-helm.yaml
+++ b/kubernetes/namespaces/base/crossplane-system/install/crossplane-helm.yaml
@@ -8,7 +8,7 @@ spec:
   interval: 24h
   url: https://charts.crossplane.io/stable
 ---
-apiVersion: helm.toolkit.fluxcd.io/v2beta1
+apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: crossplane
