--- a/kubernetes/namespaces/base/kagent/kagent/helm/kagent-crds-release.yaml
+++ b/kubernetes/namespaces/base/kagent/kagent/helm/kagent-crds-release.yaml
@@ -1,5 +1,5 @@
 ---
-apiVersion: helm.toolkit.fluxcd.io/v2beta1
+apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: kagent-crds
@@ -9,7 +9,7 @@ spec:
   chart:
     spec:
       chart: kagent-crds
-      version: "0.6.3"
+      version: "0.7.5"
       sourceRef:
         kind: HelmRepository
         name: kagent-helm-repo
