--- a/kubernetes/namespaces/base/kagent/kagent/helm/kagent-release.yaml
+++ b/kubernetes/namespaces/base/kagent/kagent/helm/kagent-release.yaml
@@ -1,5 +1,5 @@
 ---
-apiVersion: helm.toolkit.fluxcd.io/v2beta1
+apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: kagent
@@ -12,7 +12,7 @@ spec:
   chart:
     spec:
       chart: kagent
-      version: "0.6.3"
+      version: "0.7.5"
       sourceRef:
         kind: HelmRepository
         name: kagent-helm-repo
