--- a/kubernetes/namespaces/base/kgateway-system/helm/kgateway-crds-release.yaml
+++ b/kubernetes/namespaces/base/kgateway-system/helm/kgateway-crds-release.yaml
@@ -1,5 +1,5 @@
 ---
-apiVersion: helm.toolkit.fluxcd.io/v2beta1
+apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: kgateway-crds
@@ -9,7 +9,7 @@ spec:
   chart:
     spec:
       chart: kgateway-crds
-      version: "v2.0.4"
+      version: "v2.1.1"
       sourceRef:
         kind: HelmRepository
         name: kgateway-helm-repo
