feat: introduce Litmus chaos

--- a/kubernetes/namespaces/overlays/apps-dev/kustomization.yaml
+++ b/kubernetes/namespaces/overlays/apps-dev/kustomization.yaml
@@ -6,3 +6,4 @@ resources:
   # Add tenant workloads and basic platform services as needed
   - ../../base/kagent
   - ../../base/kgateway-system
+  - ../../base/litmus
