--- a/kubernetes/tenants/base/team-bravo/kustomization.yaml
+++ b/kubernetes/tenants/base/team-bravo/kustomization.yaml
@@ -1,9 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-# Team Bravo applications will go here
-# Example: web applications, microservices, etc.
+# Team Bravo - Application Team
+# Running: fortio echo server (simulating real-world workload)
 
 resources:
-  - team-config.yaml
   - tornado-repo.yaml
+  - fortio-echo-deployment.yaml
