--- a/kubernetes/namespaces/overlays/apps-dev/kustomization.yaml
+++ b/kubernetes/namespaces/overlays/apps-dev/kustomization.yaml
@@ -5,5 +5,6 @@ kind: Kustomization
 resources:
   # Add tenant workloads and basic platform services as needed
   - ../../base/kagent
+  - ../../base/kagent-system
   - ../../base/kgateway-system
   - ../../base/litmus
