--- a/kubernetes/clusters/apps-dev/kgateway-crds.yaml
+++ b/kubernetes/clusters/apps-dev/kgateway-crds.yaml
@@ -1,14 +1,14 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: platform
+  name: kgateway-crds
   namespace: flux-system
 spec:
   interval: 10m
   timeout: 30m
-  path: ./kubernetes/namespaces/overlays/apps-dev
+  path: ./kubernetes/namespaces/base/kgateway-system/helm
   prune: true
-  wait: false
+  wait: true
   sourceRef:
     kind: GitRepository
     name: flux-system
@@ -16,6 +16,3 @@ spec:
     substituteFrom:
       - kind: ConfigMap
         name: platform-config
-  dependsOn:
-    - name: kagent-crds
-    - name: kgateway-crds
