--- a/kubernetes/namespaces/base/litmus/experiments/kustomization.yaml
+++ b/kubernetes/namespaces/base/litmus/experiments/kustomization.yaml
@@ -3,4 +3,5 @@ kind: Kustomization
 
 resources:
   - pod-delete-rbac.yaml
+  - pod-delete-chaosexperiment.yaml
   - aggressive-pod-delete-experiment.yaml
