--- a/kubernetes/namespaces/base/litmus/experiments/pod-delete-rbac.yaml
+++ b/kubernetes/namespaces/base/litmus/experiments/pod-delete-rbac.yaml
@@ -24,11 +24,26 @@ rules:
     resources: ["pods/log"]
     verbs: ["get", "list", "watch"]
   - apiGroups: [""]
-    resources: ["deployments", "statefulsets", "replicasets", "daemonsets"]
+    resources: ["pods/exec"]
+    verbs: ["get", "list", "create"]
+  - apiGroups: [""]
+    resources: ["configmaps"]
+    verbs: ["get", "list"]
+  - apiGroups: [""]
+    resources: ["deployments", "statefulsets", "replicasets", "daemonsets", "replicationcontrollers"]
     verbs: ["list", "get"]
   - apiGroups: ["apps"]
     resources: ["deployments", "statefulsets", "replicasets", "daemonsets"]
     verbs: ["list", "get"]
+  - apiGroups: ["apps.openshift.io"]
+    resources: ["deploymentconfigs"]
+    verbs: ["list", "get"]
+  - apiGroups: ["argoproj.io"]
+    resources: ["rollouts"]
+    verbs: ["list", "get"]
+  - apiGroups: ["batch"]
+    resources: ["jobs"]
+    verbs: ["create", "list", "get", "delete", "deletecollection"]
   - apiGroups: ["litmuschaos.io"]
     resources: ["chaosengines", "chaosexperiments", "chaosresults"]
     verbs: ["create", "delete", "get", "list", "patch", "update"]
